--- a/src/assets/scss/layout/_flex.scss
+++ b/src/assets/scss/layout/_flex.scss
@@ -3,3 +3,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.flx-end {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
