--- a/src/app/modules/events/components/google-maps-wrapper/google-maps-wrapper.component.html
+++ b/src/app/modules/events/components/google-maps-wrapper/google-maps-wrapper.component.html
@@ -1,3 +1,13 @@
-<google-map [height]="!onMobile ? '75vh' : '100vh'" 
-            width="100%">
+<google-map [height]="!onMobile ? '75vh' : '100vh'"
+            width="100%"
+            [zoom]="zoom"
+            [center]="center"
+            [options]="options">
+          <map-marker
+            *ngFor="let marker of markers.flat()"
+            [position]="marker.position"
+            [title]="marker.title"
+            [options]="marker.options"
+            (mapClick)="openInfo(marker)">
+          </map-marker>
 </google-map>
