--- a/src/assets/scss/modules/events/components/_event-detail.scss
+++ b/src/assets/scss/modules/events/components/_event-detail.scss
@@ -4,10 +4,21 @@
     padding: 1.5rem;
     height: fit-content;
     border-radius: 4px;
+    transition: background-color, .2s ease;
+    cursor: pointer;
 
     &__row {
         display: flex;
         align-items: center;
         padding: .5rem 0;
+    }
+
+    &:hover {
+        background-color: #1f2d3a;
+    }
+
+    &__no-events {
+        text-align: center;
+        font-style: italic;
     }
 }
