--- a/src/assets/scss/modules/events/components/_navbar.scss
+++ b/src/assets/scss/modules/events/components/_navbar.scss
@@ -17,6 +17,15 @@
 
     &__actions {
         margin: 0 1rem;
+
+        &-btn {
+            animation: slide-in-left ease .4s forwards;
+        }
+    }
+
+    &__deauth-btn {
+        opacity: 0;
+        animation: slide-in-right ease .4s forwards;
     }
 }
 
@@ -60,7 +69,7 @@
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-        animation: slide-in-down ease .2s forwards;
+        animation: slide-in-down-sm ease .2s forwards;
     }
 }
 
