--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #121212; }
 p { margin-bottom: 0 !important; color: #fff; }
 .btn-icon { font-size: 18px; margin-bottom: -5px;}
-.modal-class .mat-dialog-container { background-color: #000000e3 !important;}
+.modal-class .mat-dialog-container { background-color: #000000e8 !important;}
+.modal-class-2 .mat-dialog-container { background-color: #1a1a1d !important;}
+.mat-error { margin-left: -5px !important; }
 /* width */
 ::-webkit-scrollbar {
   width: 6px;
