--- a/src/app/modules/events/components/navbar/navbar.component.html
+++ b/src/app/modules/events/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
     </div>
 </nav>
 
-<nav *ngIf="onMobile && !hideNav" class="navbar-mobile">
+<nav *ngIf="onMobile && !hideNav" class="navbar-mobile" style="position:relative">
     <button (click)="toggleNavMenu()"
             class="navbar-mobile__menu--btn" 
             mat-icon-button aria-label="Icon with three bars in a column">
