Made several changes to Mobile UI

--- a/src/app/modules/events/components/display-marker-info-modal/display-marker-info-modal.component.html
+++ b/src/app/modules/events/components/display-marker-info-modal/display-marker-info-modal.component.html
@@ -10,7 +10,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="event-detail__row">
-      <p>Event coordinates: <span class="u-bold">lat: {{data.marker.position.lat}}, lng: {{data.marker.position.lat}}</span></p>  
+      <p>Event coordinates: <span class="u-bold">lat: {{data.marker.position.lat}}, lng: {{data.marker.position.lng}}</span></p>  
     </div>
     <mat-divider></mat-divider>
     <div class="event-detail__row">
