--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,11 @@ p { margin-bottom: 0 !important; color: #fff; }
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(82, 76, 76);
 }
+
+.gm-svpc {
+  display: none;
+}
+
+.gmnoprint {
+  display: none;
+}
