--- a/src/assets/scss/modules/events/components/_event-detail.scss
+++ b/src/assets/scss/modules/events/components/_event-detail.scss
@@ -1,10 +1,11 @@
 .event-detail {
     background-color: #1a222a;
-    margin: 1rem;
+    margin: 2rem 1rem;
     padding: 1.5rem;
     height: fit-content;
-    border-radius: 4px;
+    border-radius: 2px;
     transition: background-color, .2s ease;
+    border: 1px solid rgb(168, 168, 168);
     cursor: pointer;
 
     &__row {
