--- a/src/assets/scss/modules/events/components/_mobile-event-list.scss
+++ b/src/assets/scss/modules/events/components/_mobile-event-list.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding-bottom: 1rem;
+    padding: .25rem 0;
     bottom: 0;
     z-index: 99;
     width: 100%;
@@ -12,6 +12,8 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+    height: 30px;
+    max-height: 30px;
 
     &__btn {
         width: 80%;
