--- a/src/assets/scss/modules/events/pages/_events.scss
+++ b/src/assets/scss/modules/events/pages/_events.scss
@@ -1,3 +1,5 @@
+@import '../../../base/animations';
+
 .events {
     &__toolbar {
         background-color:rgb(29, 29, 31);
@@ -17,6 +19,15 @@
         margin-bottom: 0;
         margin-right: 2rem;
         font-style: italic;
+    }
+
+    &__fab-btn {
+        opacity: 0;
+        position: fixed;
+        z-index: 99;
+        right: 5%;
+        bottom: 65px;
+        animation: slide-in-up ease .4s forwards;
     }
 }
 
