--- a/src/app/modules/events/components/navbar/navbar.component.html
+++ b/src/app/modules/events/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <button class="navbar__deauth-btn"
                 *ngIf="isLoggedIn" mat-stroked-button color="warn" 
                 (click)="deauthenticate()">
-                De-authenticate
+                Deauthenticate
             <mat-icon class="btn-icon">logout</mat-icon>
         </button>
     </div>
@@ -48,7 +48,7 @@
         <mat-toolbar-row *ngIf="isLoggedIn">
             <button class="u-width-100"
                 mat-stroked-button color="warn" (click)="deauthenticate()">
-                De-authenticate
+                Deauthenticate
                 <mat-icon class="btn-icon">logout</mat-icon>
             </button>
         </mat-toolbar-row>
