--- a/src/app/modules/events/components/event-list/event-list.component.html
+++ b/src/app/modules/events/components/event-list/event-list.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="!onMobile ? 'event-list' : 'event-list-mobile ' + slideInDownAnimation">
     <mat-toolbar [ngClass]="!onMobile? 'event-list__toolbar': 'event-list-mobile__toolbar'"
                  (pandown)="closeEventList()">
-        Event feed <mat-icon class="event-list__speaker-icon">campaign</mat-icon>
+        {{ lang.eventList.eventFeed }} <mat-icon class="event-list__speaker-icon">campaign</mat-icon>
         <button *ngIf="onMobile"
             (click)="closeEventList()"
             class="event-list-mobile__close-icon"
