--- a/src/assets/scss/base/_utlities.scss
+++ b/src/assets/scss/base/_utlities.scss
@@ -13,3 +13,24 @@
 .u-bold {
     font-weight: 600;
 }
+
+.u-sm-font {
+    font-size: 11px;
+}
+
+.u-offset-pad {
+    margin-bottom: -1.34375em !important; 
+}
+
+.u-ital-bld-p {
+    font-style: italic;
+    margin-bottom: 0;
+}
+
+.u-mg-left {
+    margin-left: 2rem !important; 
+}
+
+.u-mg-right {
+    margin-right: 2rem !important;
+}
