--- a/src/app/modules/events/components/first-time-authenticate-modal/first-time-authenticate-modal.component.html
+++ b/src/app/modules/events/components/first-time-authenticate-modal/first-time-authenticate-modal.component.html
@@ -1,26 +1,26 @@
 <h2 *ngIf="!loginError" class="auth__header" 
-    mat-dialog-title align="center">Enter credentials</h2>
+    mat-dialog-title align="center">{{ lang.neverAuthenticatedModal.credentials }}</h2>
 <h2 *ngIf="loginError" class="auth__header--failed" 
-     mat-dialog-title align="center">Authentication failed
+     mat-dialog-title align="center">{{ lang.shared.authFailed }}
 </h2>
 <div class="auth">
     <form [formGroup]="firstTimeAuthForm" (ngSubmit)="onSubmit(firstTimeAuthForm)" 
           class="auth__form">
         <mat-form-field class="auth__form--field" appearance="outline">
-            <mat-label>Email</mat-label>
+            <mat-label>{{ lang.shared.email }}</mat-label>
             <input matInput formControlName="email">
             <mat-error *ngIf="firstTimeAuthForm.get('email')">{{getFormErrors('email')}}</mat-error>
         </mat-form-field>
         <mat-form-field class="auth__form--field" appearance="outline">
-            <mat-label>Password</mat-label>
+            <mat-label>{{ lang.shared.password }}</mat-label>
             <input matInput type="password" formControlName="password">
             <mat-error *ngIf="firstTimeAuthForm.get('password')">{{getFormErrors('password')}}</mat-error>
         </mat-form-field>
         <div class="auth__form--actions">
             <button mat-button mat-dialog-close type="button"
-                    [disabled]="isSubmitting ? true : false">Cancel</button>
+                    [disabled]="isSubmitting ? true : false">{{ lang.shared.cancelBtn }}</button>
             <button *ngIf="!isSubmitting" mat-flat-button color="primary" type="submit"
-                    dkFocusInitial>Submit</button>
+                    dkFocusInitial>{{ lang.shared.submitBtn }}</button>
             <mat-spinner *ngIf="isSubmitting"diameter="35"></mat-spinner>
         </div>
     </form>
