--- a/src/assets/scss/modules/events/components/_event-detail.scss
+++ b/src/assets/scss/modules/events/components/_event-detail.scss
@@ -10,12 +10,13 @@
 
     &__row {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         padding: .5rem 0;
     }
 
     &:hover {
-        background-color: #1f2d3a;
+        background-color: #141a20;
     }
 
     &__no-events {
