--- a/src/assets/scss/modules/events/pages/_events.scss
+++ b/src/assets/scss/modules/events/pages/_events.scss
@@ -1,24 +1,24 @@
 @import '../../../base/animations';
 
 .events {
+
     &__toolbar {
         background-color:rgb(29, 29, 31);
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
-        padding-right: 2rem;
+        padding: .5rem 2rem;
         margin-top: 80px;
         border-bottom: 1px solid #000;
+
+        &--wrapper {
+            display: flex;
+            align-items: center;
+        }
 
         &--btn {
             min-width: 200px;
         }
-    }
-
-    &__para {
-        margin-bottom: 0;
-        margin-right: 2rem;
-        font-style: italic;
     }
 
     &__fab-btn {
@@ -26,8 +26,30 @@
         position: fixed;
         z-index: 99;
         right: 5%;
-        bottom: 65px;
+        bottom: 80px;
         animation: slide-in-up ease .4s forwards;
+    }
+
+    &__fab-btn--left {
+        opacity: 0;
+        position: fixed;
+        z-index: 99;
+        right: 5%;
+        bottom: 160px;
+        animation: slide-in-up ease .4s forwards;
+        background-color: rgb(235, 229, 229) !important;
+        color: #000 !important;
+
+        &-iso {
+            opacity: 0;
+            position: fixed;
+            z-index: 99;
+            right: 5%;
+            bottom: 80px;
+            animation: slide-in-up ease .4s forwards;
+            background-color: rgb(235, 229, 229) !important;
+            color: #000 !important;    
+        }
     }
 }
 
